--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -66,6 +66,10 @@ body {
 .main_content {
     padding: 0;
 }
+#main_header {
+    // display: flex;
+    // align-items: center;
+}
 #main_body {
     overflow-y: auto;
 
